# rag-faq-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.ru.md  conftest.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
bot/handlers/: admin.py  ask.py  start.py
core/: config.py
db/: session.py
services/: answer.py  openai_chat.py  rag_service.py
tests/: test_admin_docs.py  test_answer.py  test_format_answer.py
